turso-test-runner/tests/snapshot_tests/indexes/snapshots/indexes__covering-index-subset.snap
---
source: indexes.sqltest
expression: |-
  SELECT warehouse_id, quantity
      FROM inventory
      WHERE warehouse_id = 1;
info:
  statement_type: SELECT
  tables:
  - inventory
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH inventory USING INDEX idx_inventory_covering

BYTECODE
addr  opcode       p1  p2  p3  p4          p5  comment
   0  Init          0  10   0               0  Start at 10
   1  OpenRead      0  10   0  k(4,B,B,B)   0  index=idx_inventory_covering, root=10, iDb=0
   2  Integer       1   3   0               0  r[3]=1
   3  SeekGE        0   9   3               0  key=[3..3]
   4    IdxGT       0   9   3               0  key=[3..3]
   5    Column      0   0   1               0  r[1]=idx_inventory_covering.warehouse_id
   6    Column      0   2   2               0  r[2]=idx_inventory_covering.quantity
   7    ResultRow   1   2   0               0  output=r[1..2]
   8  Next          0   4   0               0
   9  Halt          0   0   0               0
  10  Transaction   0   1  14               0  iDb=0 tx_mode=Read
  11  Goto          0   1   0               0
