turso-test-runner/tests/snapshot_tests/indexes/snapshots/indexes__join-with-index.snap
---
source: indexes.sqltest
expression: |-
  SELECT o.id, o.order_date, i.quantity
      FROM orders o
      JOIN inventory i ON o.id = i.product_id
      WHERE o.customer_id = 100;
info:
  statement_type: SELECT
  tables:
  - inventory
  - o.id
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SEARCH o USING INDEX idx_orders_customer_date
`--SCAN inventory AS i USING COVERING INDEX idx_inventory_covering

BYTECODE
addr  opcode          p1  p2  p3  p4          p5  comment
   0  Init             0  17   0               0  Start at 17
   1  OpenRead         0   7   0  k(3,B,B)     0  index=idx_orders_customer_date, root=7, iDb=0
   2  OpenRead         1  10   0  k(4,B,B,B)   0  index=idx_inventory_covering, root=10, iDb=0
   3  Integer        100   4   0               0  r[4]=100
   4  SeekGE           0  16   4               0  key=[4..4]
   5    IdxGT          0  16   4               0  key=[4..4]
   6    Rewind         1  15   0               0  Rewind index idx_inventory_covering
   7      IdxRowId     0   6   0               0  r[6]=cursor 0 for index idx_orders_customer_date.rowid
   8      Column       1   1   7               0  r[7]=idx_inventory_covering.product_id
   9      Ne           6   7  14  Binary       0  if r[6]!=r[7] goto 14
  10      IdxRowId     0   1   0               0  r[1]=cursor 0 for index idx_orders_customer_date.rowid
  11      Column       0   1   2               0  r[2]=idx_orders_customer_date.order_date
  12      Column       1   2   3               0  r[3]=idx_inventory_covering.quantity
  13      ResultRow    1   3   0               0  output=r[1..3]
  14    Next           1   7   0               0
  15  Next             0   5   0               0
  16  Halt             0   0   0               0
  17  Transaction      0   1  14               0  iDb=0 tx_mode=Read
  18  Goto             0   1   0               0
